# Bad2DGameEngine

./: .gitignore  CMakeLists.txt  Errors.cpp  Errors.h  FPSCounter.cpp  FPSCounter.h  FontManager.cpp  FontManager.h  GLSLProgram.cpp  GLSLProgram.h  IOManager.cpp  IOManager.h  MainGame.cpp  MainGame.h  README.md  ResourceManager.cpp  ResourceManager.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureCache.cpp  TextureCache.h  Vertex.h  main.cpp
Shaders/: colorShader.frag  colorShader.vert
